<resources>
    <string name="app_name">Assignment 1</string>
    <string name="assignment_title">Assignment 1</string>
    <string name="e_1">Hello Program</string>
    <string name="e_2">Android Button</string>
    <string name="e_3">Android TextField</string>
    <string name="e_4">CheckBox</string>
    <string name="e_5">Android Radio Button</string>
    <string name="e_6">Android ListView</string>
    <string name="e_7">Android AlertDialog Example</string>
    <string name="e_8">Android Sqlite</string>
    <string name="e1_value">Hello Android World!</string>
    <string name="e2_button_value">Click Me!</string>
    <string name="e3_text_value">"Example of well-designed text field!\nAs you can see the texts here occupy, multiple lines!\nAnd has emojis 🇷🇼🇷🇼🇷🇼"</string>
    <string name="e4_checkbox_text">Are you a student?</string>
    <string name="not_a_student">YOU ARE A NOT STUDENT!</string>
    <string name="a_student">YOU ARE A STUDENT!</string>
    <string name="e5_title">What is your favorite meal?</string>
    <string name="chicken">Chicken</string>
    <string name="salad">Salads</string>
    <string name="a_carnivore">You are a carnivore 😒!</string>
    <string name="you_are_a_vegan">You are a vegan 🤓!</string>
    <string name="e6_add_list_hint">Add new task to list</string>
    <string name="add_to_list">Add to List</string>
    <string name="location">Location</string>
    <string name="designation">Designation</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="create_user_title">Create a User</string>
    <string name="list_of_users">List of Users</string>
    <string name="name_label">Name:</string>
    <string name="id_label">ID:</string>
    <string name="location_label">Location:</string>
    <string name="designation_label">Designation:</string>
    <string name="clicked_times">Clicked %d Times!</string>
</resources>