<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Q8">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_user_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q8_insert_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/location"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q8_insert_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/location"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q8_insert_designation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/designation"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <Button
            android:id="@+id/q8_insert_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleSaveClick"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>