<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/e5_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/q5_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp">

            <RadioButton
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chicken"
                android:textStyle="bold" />

            <RadioButton
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salad"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/q5_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>